--- a/src/index.html
+++ b/src/index.html
@@ -11,29 +11,31 @@
   </head>
   <body>
     <header class="header">
-      <div class="header__left">
-        <p class="header__text">Події</p>
-        <h1 class="header__title">
-          Худож<span class="header__title-transparent">ній</span> музей
-        </h1>
-        <a href="#" class="header__link">
-          <span class="header__link-text">Квитки</span><span class="header__link-arrow">&#10095</span>
-        </a>
-      </div>
-      <div class="header__right">
-        <img
-          src="\images\header-img.png"
-          alt="Національй художній музей України"
-          class="header__img"
-        >
-        <p class="header__logo">
-          Na<br>Mu
-        </p>
-      </div>
+      <section class="header__section section">
+        <div class="header__left">
+          <p class="header__text">Події</p>
+          <h1 class="header__title">
+            Худож<span class="header__title-transparent">ній</span> музей
+          </h1>
+          <a href="#" class="header__link">
+            <span class="header__link-text">Квитки</span><span class="header__link-arrow">&#10095</span>
+          </a>
+        </div>
+        <div class="header__right">
+          <img
+            src="\images\header-img.png"
+            alt="Національй художній музей України"
+            class="header__img"
+          >
+          <p class="header__logo">
+            Na<br>Mu
+          </p>
+        </div>
+      </section>
     </header>
 
     <main class="main">
-      <section class="main__section">
+      <section class="main__section section">
         <div class="main__events events">
           <h2 class="events__title">
             Актуальні події
@@ -91,7 +93,7 @@
         </div>
       </section>
 
-      <section class="main__section">
+      <section class="main__section section">
         <div class="description">
           <div class="description__info">
             <p class="description__name">
@@ -107,7 +109,7 @@
         </div>
       </section>
 
-      <section class="main__section">
+      <section class="main__section section">
         <div class="gallery">
           <h2 class="gallery__title">
             Галерея
@@ -147,7 +149,7 @@
         </div>
       </section>
 
-      <section class="main__section">
+      <section class="main__section section">
         <div class="subscription">
           <h2 class="subscription__title">
             Підписка
@@ -175,7 +177,7 @@
     </main>
 
     <footer class="footer">
-      <section class="footer__section">
+      <section class="footer__section section">
         <div class="footer__connection-container">
           <div class="footer__links links">
             <p class="links__logo">
