gallery, footer section

--- a/src/index.html
+++ b/src/index.html
@@ -18,21 +18,15 @@
         class="header__img"
       >
       <span class="header__logo logo">na<br>mu</span>
-      <input
-        type="checkbox"
-        class="header__toggler"
-        id="nav-toggler"
-        >
-      <label for="nav-toggler" class="header__toggler-label">
-        <span></span>
-      </label>
       <nav class="header__nav nav">
       </nav>
     </header>
 
     <main>
       <div class="art-museum">
-        <h1 class="art-museum__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+        <h1 class="art-museum__title">
+          ХУДОЖ<span class="art-museum__transparant-title">НІЙ</span> МУЗЕЙ
+        </h1>
         <button class="art-museum__btn">КВИТКИ<span data-icon=""></span></button>
       </div>
 
@@ -95,17 +89,17 @@
           <img
             src="\images\gallery\1.jpeg"
             alt="picture"
-            class="gallery__img"
+            class="gallery__img gallery__img--first"
           >
           <img
             src="\images\gallery\2.jpg"
             alt="picture"
-            class="gallery__img"
+            class="gallery__img gallery__img--second"
           >
           <img
             src="\images\gallery\3.jpg"
             alt="Дівчина сидить на лавці в парку"
-            class="gallery__img"
+            class="gallery__img gallery__img--third"
           >
           <img
             src="\images\gallery\4.jpg"
@@ -136,129 +130,130 @@
     </main>
 
     <footer class="footer">
-      <div class="footer__left">
-        <div class="footer__media media">
-          <span class="media__logo">na<br>mu</span>
-          <div class="media__links links">
-            <a href="#" class="links__item">
-              <img
-              src="/images/media-icons/facebook.svg" alt="facebook"
-              >
-            </a>
-            <a href="#" class="links__item">
-              <img
-              src="/images/media-icons/instagram.svg" alt="instagram"
-              >
-            </a>
+      <div class="footer__wrap">
+        <div class="footer__left">
+          <div class="footer__media media">
+            <span class="media__logo">na<br>mu</span>
+            <div class="media__links links">
+              <a href="#" class="links__item">
+                <img
+                src="/images/media-icons/facebook.svg" alt="facebook"
+                >
+              </a>
+              <a href="#" class="links__item">
+                <img
+                src="/images/media-icons/instagram.svg" alt="instagram"
+                >
+              </a>
+            </div>
+          </div>
+
+          <div class="footer__information information">
+            <div class="information__timetable timetable">
+              <h4 class="timetable__title">Графік роботи</h4>
+              <p class="timetable__time">
+                <span class="timetable__time--bold">
+                  12:00 — 20:00
+                </span>
+                середа
+              </p>
+              <p class="timetable__time">
+                <span class="timetable__time--bold">
+                  12:00 — 20:00
+                </span>
+                четвер
+              </p>
+              <p class="timetable__time">
+                <span class="timetable__time--bold">
+                  12:00 — 20:00
+                </span>
+                п’ятниця
+              </p>
+              <p class="timetable__time">
+                <span class="timetable__time--bold">
+                  11:00 — 19:00
+                </span>
+                субота
+              </p>
+              <p class="timetable__time">
+                <span class="timetable__time--bold">
+                  11:00 — 19:00
+                </span>
+                неділя
+              </p>
+              <p class="timetable__text">
+                Вихідні понеділок,<br> вівторок<br>
+                Каса припиняє роботу за<br> 1 годину<br>
+                до закриття музею
+              </p>
+            </div>
+            <div class="information__contacts contacts">
+              <h4 class="contacts__title">
+                Контакти:
+              </h4>
+              вул. М. Грушевського, 6; Київ, 01001<br>
+              <a href="tel:+38 (044) 278-13-57" class="contacts__link">
+                тел. +38 (044) 278-13-57
+              </a>
+              <a href="tel:+38 (044) 278-74-54" class="contacts__link">
+                факс +38 (044) 278-74-54
+              </a>
+              <a href="mailto:info@namu.kiev.ua" class="contacts__link">
+                e-mail: info@namu.kiev.ua
+              </a>
+            </div>
           </div>
         </div>
 
-        <div class="footer__information information">
-          <div class="information__timetable timetable">
-            <h4 class="timetable__title">Графік роботи</h4>
-            <p class="timetable__time">
-              <span class="timetable__time--bold">
-                12:00 — 20:00
-              </span>
-              середа
-            </p>
-            <p class="timetable__time">
-              <span class="timetable__time--bold">
-                12:00 — 20:00
-              </span>
-              четвер
-            </p>
-            <p class="timetable__time">
-              <span class="timetable__time--bold">
-                12:00 — 20:00
-              </span>
-              п’ятниця
-            </p>
-            <p class="timetable__time">
-              <span class="timetable__time--bold">
-                11:00 — 19:00
-              </span>
-              субота
-            </p>
-            <p class="timetable__time">
-              <span class="timetable__time--bold">
-                11:00 — 19:00
-              </span>
-              неділя
-            </p>
-            <p class="timetable__text">
-              Вихідні понеділок,<br> вівторок<br>
-              Каса припиняє роботу за<br> 1 годину<br>
-              до закриття музею
-            </p>
-          </div>
-          <div class="information__contacts contacts">
-            <h4 class="contacts__title">
-              Контакти:
-            </h4>
-            вул. М. Грушевського, 6; Київ, 01001<br>
-            <a href="tel:+38 (044) 278-13-57" class="contacts__link">
-              тел. +38 (044) 278-13-57
-            </a>
-            <a href="tel:+38 (044) 278-74-54" class="contacts__link">
-              факс +38 (044) 278-74-54
-            </a>
-            <a href="mailto:info@namu.kiev.ua" class="contacts__link">
-              e-mail: info@namu.kiev.ua
-            </a>
-          </div>
+        <div class="footer__menu">
+          <nav class="footer__nav nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  Галерея
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  Виставки та події
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="" class="nav__link">
+                  Відвідування
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  Стати нашим другом
+                </a>
+              </li>
+            </ul>
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  Про нас
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  Магазин
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  Блог
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="" class="nav__link">
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
         </div>
       </div>
-
-      <div class="footer__menu">
-        <nav class="footer__nav nav">
-          <ul class="nav__list">
-            <li class="nav__item">
-              <a href="#" class="nav__link">
-                Галерея
-              </a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="nav__link">
-                Виставки та події
-              </a>
-            </li>
-            <li class="nav__item">
-              <a href="" class="nav__link">
-                Відвідування
-              </a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="nav__link">
-                Стати нашим другом
-              </a>
-            </li>
-          </ul>
-          <ul class="nav__list">
-            <li class="nav__item">
-              <a href="#" class="nav__link">
-                Про нас
-              </a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="nav__link">
-                Магазин
-              </a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="nav__link">
-                Блог
-              </a>
-            </li>
-            <li class="nav__item">
-              <a href="" class="nav__link">
-                Контакти
-              </a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-
       <div class="footer__copyright">
         <p>
           Designed by Zhyriada Marina
