all mistakes were fixed

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
           <a class="ticket__button ticket__button--primary">
             <img
             class="ticket__svg"
-            src="./images/Vector.svg"
+            src="./images/button-arrow.svg"
             alt=""
             >
           </a>
@@ -64,7 +64,7 @@
       </div>
     </section>
 
-    <section class="main-events container">
+    <section class="main-events container inner-padding">
       <h2 class="main-events__header">Актуальні події</h2>
 
       <div class="wrap-event">
@@ -113,13 +113,12 @@
     </section>
 
     <section class="lection">
-
       <div class="lection__nature nature">
 
         <div class="nature__part part">
           <div class="part__info info">
             <p class="info__name">ВИСТАВКА</p>
-            <p class="info__date">26.08-29.11.2019</p>
+            <p class="info__date">26.08/29.11.2019</p>
           </div>
 
           <h3 class="nature__header">Від класицизму до романтизму</h3>
@@ -132,8 +131,8 @@
     </section>
 
 
-    <section class="galery container">
-      <h2>Галерея</h2>
+    <section class="galery container inner-padding">
+      <h2 class="galery__header">Галерея</h2>
       <div class="galery__album album">
         <div class="album__image-cell--1">
           <picture>
@@ -207,6 +206,12 @@
         </div>
 
       </div>
+      <div class="galery__pages-toggler pages-toggler">
+        <div class="pages-toggler__page page--has-choosed "></div>
+        <div class="pages-toggler__page "></div>
+        <div class="pages-toggler__page "></div>
+        <div class="pages-toggler__page "></div>
+      </div>
       <div class="ticket__button ticket__button--primary"></div>
     </section>
 
@@ -235,7 +240,7 @@
 
       </section>
 
-      <section class="footer-bottom container container--inner-padding">
+      <section class="footer-bottom container inner-padding container">
         <div class="footer-bottom__left-side left-side">
           <div class="left-side__icons icons">
             <img
@@ -247,14 +252,14 @@
               <a href="#">
                 <img
                   class="icons__facebook"
-                  src="./images/Facebook.svg"
+                  src="./images/facebook.svg"
                   alt="facebook"
                 >
               </a>
               <a href="/insta-link">
                 <img
                   class="icons__instagram"
-                  src="./images/Vector (1).svg"
+                  src="./images/instagram.svg"
                   alt="instagram"
                 >
               </a>
@@ -293,14 +298,8 @@
               тел. +38 (044) 278-13-57<br>
               факс +38 (044) 278-74-54<br>
               e-mail: info@namu.kiev.ua<br>
-
             </p>
-
-
-
           </div>
-
-
         </div>
 
         <div class="footer-bottom__right-side right-side">
@@ -342,6 +341,10 @@
           </div>
         </div>
       </section>
+      <div class="footer-bottom__date date container">
+        <p class="date__copyright">Copyright © 2019. All Rights Reserved.</p>
+        <p class="date__creator">Designed by Zhyriada Marina</p>
+      </div>
     </footer>
 
 
