all mistakes were fixed again

--- a/src/index.html
+++ b/src/index.html
@@ -240,7 +240,7 @@
 
       </section>
 
-      <section class="footer-bottom container inner-padding container">
+      <section class="footer-bottom container inner-padding">
         <div class="footer-bottom__left-side left-side">
           <div class="left-side__icons icons">
             <img
