--- a/src/index.html
+++ b/src/index.html
@@ -170,6 +170,7 @@
               type="button"
               value="&#10095"
               class="form__button"
+              required
             >
           </form>
         </div>
