--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
                   <p class="event__exhibition">ВИСТАВКА</p>
                   <p class="event__date">26.08-29.11.2019</p>
                 </div>
-                <h3 class="event__title">Йду і повертаюсь
+                <h3 class="event__title event__title--top">Йду і повертаюсь
                 </h3>
                 <p class="event__description">
                   Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
@@ -64,7 +64,7 @@
                   <p class="event__exhibition">ВИСТАВКА</p>
                   <p class="event__date">26.08-29.11.2019</p>
                 </div>
-                <h3 class="event__title">І спогади і мрії
+                <h3 class="event__title event__title--bottom">І спогади і мрії
                 </h3>
                 <p class="event__description">
                   Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
