--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NAMU Художній музей</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="icon" href="./images/fav.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <!--<link rel="preconnect" href="https://fonts.gstatic.com">-->
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   </head>
 
@@ -26,7 +26,9 @@
         <div class="menu__item"></div>
       </div>
       <div class="namu header__namu">
-        Na<br>mu
+        <a href="#" class="link">
+          Na<br>mu
+        </a>
       </div>
 
       <div class="tickets header__tickets header__tickets--button">
@@ -195,115 +197,122 @@
 
         </div>
       </section>
+    </main>
 
-      <footer class="footer">
-        <div class="footer__wrap">
-          <div class="footer__icons">
-            <div class="namu footer__namu">
-              <a href="#" class="link">
-                Na<br>mu
+    <footer class="footer">
+      <div class="footer__wrap">
+        <div class="footer__icons">
+          <div class="namu footer__namu">
+            <a href="#" class="link">
+              Na<br>mu
+            </a>
+          </div>
+          <div class="logo footer__logo">
+            <div class="logo__facebook">
+              <a href="#facebook.com">
+                <img src="./images/fb.png" alt="facebook">
               </a>
             </div>
-            <div class="logo footer__logo">
-              <div class="logo__facebook">
-                <a href="#facebook.com">
-                  <img src="./images/fb.png" alt="facebook">
-                </a>
-              </div>
-              <div class="logo__insta">
-                <a href="#instagram.com">
-                  <img src="./images/insta.png" alt="instagram">
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="schedule footer__schedule">
-            <p class="schedule__title">
-              Графік роботи
-            </p>
-            <p class="schedule__week">
-              <strong>12:00 - 20:00</strong> середа<br>
-              <strong>12:00 - 20:00</strong> четвер<br>
-              <strong>12:00 - 20:00</strong> п’ятниця<br>
-              <strong>11:00 - 19:00</strong> субота<br>
-              <strong>11:00 - 19:00</strong> неділя<br>
-            </p>
-            <p class="schedule__weekend">
-              <strong>Вихідні</strong>: понеділок, вівторок<br>
-              Каса припиняє роботу за 1 годину<br>
-              до закриття музею
-            </p>
-          </div>
-          <div class="contacts footer__contacts">
-            <p class="contacts__title">
-              Контакти:
-            </p>
-            <p class="contacts__text">
-                вул. М. Грушевського, 6;<br>
-                Київ, 01001<br>
-                тел. <a href="tel:+380442781357" class="link footer__link">+38 (044) 278-13-57</a><br>
-                факс <a href="tel:+380442787454" class="link footer__link">+38 (044) 278-74-54</a><br>
-                e-mail: <a href="mailto:info@namu.kiev.ua" class="link footer__link">info@namu.kiev.ua</a>
-            </p>
-          </div>
-
-          <div class="links footer__links">
-            <div class="links__list">
-              <p class="links__item">
-                <a href="#" class="link">
-                  Галерея
-                </a>
-              </p>
-              <p class="links__item">
-                <a href="#" class="link">
-                  Виставки та події
-                </a>
-              </p>
-              <p class="links__item">
-                <a href="#" class="link">
-                  Відвідування
-                </a>
-              </p>
-              <p class="links__item">
-                <a href="#" class="link">
-                  Стати нашим другом
-                </a>
-              </p>
-            </div>
-
-            <div class="links__list">
-              <p class="links__item">
-                <a href="#" class="link">
-                  Про нас
-                </a>
-              </p>
-              <p class="links__item">
-                <a href="#" class="link">
-                  Магазин
-                </a>
-              </p>
-              <p class="links__item">
-                <a href="#" class="link">
-                  Блог
-                </a>
-              </p>
-              <p class="links__item">
-                <a href="#" class="link">
-                  Контакти
-                </a>
-              </p>
+            <div class="logo__insta">
+              <a href="#instagram.com">
+                <img src="./images/insta.png" alt="instagram">
+              </a>
             </div>
           </div>
         </div>
-      </footer>
-
-      <section class="section">
-        <div class="copyrights section__copyrights">
-          <p class="copyrights__date">Copyright © 2019. All Rights Reserved.</p>
-          <p class="copyrights__name">Designed by Zhyriada Marina</p>
+        <div class="schedule footer__schedule">
+          <p class="schedule__title">
+            Графік роботи
+          </p>
+          <p class="schedule__week">
+            <strong>12:00 - 20:00</strong> середа<br>
+            <strong>12:00 - 20:00</strong> четвер<br>
+            <strong>12:00 - 20:00</strong> п’ятниця<br>
+            <strong>11:00 - 19:00</strong> субота<br>
+            <strong>11:00 - 19:00</strong> неділя<br>
+          </p>
+          <p class="schedule__weekend">
+            <strong>Вихідні</strong>: понеділок, вівторок<br>
+            Каса припиняє роботу за 1 годину<br>
+            до закриття музею
+          </p>
         </div>
-      </section>
+        <div class="contacts footer__contacts">
+          <p class="contacts__title">
+            Контакти:
+          </p>
+          <p class="contacts__text">
+            <a
+              href="https://goo.gl/maps/51F5X63ajXFryB689"
+              target="_blank"
+              rel="noopener"
+              class="link footer__link"
+            >
+              вул. М. Грушевського, 6;<br>Київ, 01001
+            </a>
+            <br>
+              тел. <a href="tel:+380442781357" class="link footer__link">+38 (044) 278-13-57</a><br>
+              факс <a href="tel:+380442787454" class="link footer__link">+38 (044) 278-74-54</a><br>
+              e-mail: <a href="mailto:info@namu.kiev.ua" class="link footer__link">info@namu.kiev.ua</a>
+          </p>
+        </div>
 
-    </main>
+        <div class="links footer__links">
+          <div class="links__list">
+            <p class="links__item">
+              <a href="#" class="link">
+                Галерея
+              </a>
+            </p>
+            <p class="links__item">
+              <a href="#" class="link">
+                Виставки та події
+              </a>
+            </p>
+            <p class="links__item">
+              <a href="#" class="link">
+                Відвідування
+              </a>
+            </p>
+            <p class="links__item">
+              <a href="#" class="link">
+                Стати нашим другом
+              </a>
+            </p>
+          </div>
+
+          <div class="links__list">
+            <p class="links__item">
+              <a href="#" class="link">
+                Про нас
+              </a>
+            </p>
+            <p class="links__item">
+              <a href="#" class="link">
+                Магазин
+              </a>
+            </p>
+            <p class="links__item">
+              <a href="#" class="link">
+                Блог
+              </a>
+            </p>
+            <p class="links__item">
+              <a href="#" class="link">
+                Контакти
+              </a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <section class="section">
+      <div class="copyrights section__copyrights">
+        <p class="copyrights__date">Copyright © 2019. All Rights Reserved.</p>
+        <p class="copyrights__name">Designed by Zhyriada Marina</p>
+      </div>
+    </section>
+
   </body>
 </html>
