--- a/src/index.html
+++ b/src/index.html
@@ -57,18 +57,19 @@
           </div>
         </div>
       </section>
-      <div class="header__text">ХУДОЖНІЙ МУЗЕЙ</div>
-      <div class="header__background"></div>
-      <div class="header__logo"></div>
-      <label for="menu" class="header__burger"></label>
 
-      <div class="header__text-aft">ХУДОЖНІЙ МУЗЕЙ</div>
+      <div class="header__background">
+        <div class="header__text">ХУДОЖНІЙ МУЗЕЙ</div>
+        <div class="header__text-aft">ХУДОЖНІЙ МУЗЕЙ</div>
+      </div>
       <div class="header__buy">
         <button class="button">
           <div class="button__text">Купити</div>
           <div class="button__arrow">></div>
         </button>
       </div>
+      <div class="header__logo"></div>
+      <label for="menu" class="header__burger"></label>
     </header>
     <main>
       <section class="title">Актуальні події</section>
@@ -92,8 +93,40 @@
         </div>
         <div class="card__image image__bottom"></div>
       </section>
-      <section class="cover">
-
+      <section class="event img-top">
+        <div class="event__card">
+          <p class="card__type-event">ЛЕКЦІЯ <a class="card__date">26.08-29.11.2019</a></p>
+          <strong class="card__name">Від класицизму до романтизму</strong>
+        </div>
+      </section>
+      <section class="title">Галерея</section>
+      <section class="gallery">
+      </section>
+      <section class="event img-bottom">
+        <p>
+          <strong class="event__follow">
+            Підписка
+          </strong>
+        </p>
+        <p class="event__details">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
+        <form
+          class="event__form"
+          method="GET"
+          action="localhost:8080"
+        >
+          <input
+            class="event__email"
+            type="email"
+            placeholder="Email"
+          >
+          <input
+            class="event__submit"
+            type="submit"
+            value=">"
+          >
+        </form>
       </section>
     </main>
   </body>
