--- a/src/index.html
+++ b/src/index.html
@@ -134,7 +134,7 @@
     <section class="galery container inner-padding">
       <h2 class="galery__header">Галерея</h2>
       <div class="galery__album album">
-        <div class="album__image-cell--1">
+        <div class="image-cell album__image-cell--1">
           <picture>
 
             <source srcset="./images/RectangleEvent(1)1280screen.png" media="(min-width: 1024px)">
@@ -146,7 +146,7 @@
           </picture>
 
         </div>
-        <div class="album__image-cell--2">
+        <div class="image-cell album__image-cell--2">
           <picture>
             <source srcset="./images/RectangleEvent(2)1280screen.png" media="(min-width: 1024px)">
             <img
@@ -158,7 +158,7 @@
 
         </div>
 
-        <div class="album__image-cell--3">
+        <div class="image-cell album__image-cell--3">
           <picture>
             <source srcset="./images/RectangleEvent(3)1280screen.png" media="(min-width: 1024px)">
             <!-- <source srcset="./images/RectangleEvent(3)1280screen.png" media="(min-width: 1024px)"> -->
@@ -170,7 +170,7 @@
           </picture>
 
         </div>
-        <div class="album__image-cell--4">
+        <div class="image-cell album__image-cell--4">
           <picture>
             <source srcset="./images/RectangleEvent(4)1280screen.png" media="(min-width: 1024px)">
             <img
@@ -181,7 +181,7 @@
           </picture>
 
         </div>
-        <div class="album__image-cell--5">
+        <div class="image-cell album__image-cell--5">
           <picture>
             <source srcset="./images/RectangleEvent(extra1)1280screen.png" media="(min-width: 1800px)">
             <img
@@ -193,7 +193,7 @@
 
         </div>
 
-        <div class="album__image-cell--6">
+        <div class="image-cell album__image-cell--6">
           <picture>
             <source srcset="./images/RectangleEvent(extra2)1280screen.png" media="(min-width: 1800px)">
             <img
@@ -243,20 +243,22 @@
       <section class="footer-bottom container inner-padding">
         <div class="footer-bottom__left-side left-side">
           <div class="left-side__icons icons">
-            <img
+            <a href="http://namu.kiev.ua/">
+              <img
               class="icons__namu"
               src="./images/NA MU.svg"
               alt=""
             >
+            </a>
             <div class="icons__network">
-              <a href="#">
+              <a href="https://uk-ua.facebook.com/">
                 <img
                   class="icons__facebook"
                   src="./images/facebook.svg"
                   alt="facebook"
                 >
               </a>
-              <a href="/insta-link">
+              <a href="https://www.instagram.com/">
                 <img
                   class="icons__instagram"
                   src="./images/instagram.svg"
