--- a/src/index.html
+++ b/src/index.html
@@ -157,7 +157,11 @@
           <p class="subscription__text">
             Бути в курсі всіх актуальних подій та останніх новин.
           </p>
-          <form action="#" class="subscription__form form">
+          <form
+            action="#"
+            method="GET"
+            class="subscription__form form"
+          >
             <label for="email"></label>
             <input
               type="email"
