--- a/src/index.html
+++ b/src/index.html
@@ -101,6 +101,14 @@
       </section>
       <section class="title">Галерея</section>
       <section class="gallery">
+        <div class="gallery__grid">
+          <div class="gallery__image"></div>
+          <div class="gallery__image"></div>
+          <div class="gallery__image"></div>
+          <div class="gallery__image"></div>
+          <div class="gallery__image"></div>
+          <div class="gallery__image"></div>
+        </div>
       </section>
       <section class="event img-bottom">
         <p>
@@ -129,5 +137,8 @@
         </form>
       </section>
     </main>
+    <footer class="footer">
+
+    </footer>
   </body>
 </html>
