--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,288 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <span class="header__logo">na<br>mu</span>
+      <div class="header__background">
+        <div class="header__art art">
+          <h1 class="art__title">
+            ХУДОЖ<span class="art__transparant-title">НІЙ</span><br> МУЗЕЙ
+          </h1>
+          <button class="art__btn">КВИТКИ<span data-icon=""></span></button>
+        </div>
+      </div>
+      <input
+        type="checkbox"
+        class="header__toggler"
+        id="nav-toggler"
+        >
+      <label for="nav-toggler" class="header__toggler-label">
+        <span class="header__toggler-menu"></span>
+      </label>
+      <nav class="header__nav nav">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="" class="nav__link"></a>
+          </li>
+        </ul>
+      </nav>
+      <div class="header__events">ПОДІЇ</div>
+    </header>
+
+    <main>
+      <div class="current-events">
+        <h2 class="current-events__title">Актуальні події</h2>
+        <section class="current-events__event event">
+          <img
+            src="/images/current-events/1.jpeg"
+            alt="Українське мистецтво"
+            class="event__img"
+          >
+          <div class="event__wrap">
+            <div class="event__exhibition exhibition">
+              <h4 class="exhibition__title">ВИСТАВКА</h4>
+              <p class="exhibition__date">26.08-29.11.2019</p>
+            </div>
+            <div class="event__article article">
+              <h3 class="article__title">
+                Йду і повертаюсь
+              </h3>
+              <p class="article__text">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+          </div>
+        </section>
+
+        <section class="current-events__event event event--right">
+          <img
+            src="/images/current-events/2.jpeg"
+            alt="виставка - І спогади і мрії"
+            class="event__img"
+          >
+          <div class="event__wrap">
+            <div class="event__exhibition exhibition">
+              <h4 class="exhibition__title">ВИСТАВКА</h4>
+              <p class="exhibition__date">26.08-29.11.2019</p>
+            </div>
+            <div class="event__article article">
+              <h3 class="article__title">
+                І спогади і мрії
+              </h3>
+              <p class="article__text">
+                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </div>
+        </section>
+      </div>
+
+      <div class="romantism">
+        <div class="romantism__background"></div>
+        <div class="romantism__wrap">
+          <div class="romantism__lection lection">
+            <h4 class="lection__title">ЛЕКЦІЯ</h4>
+            <p class="lection__date">
+              26/08/2019 - 11:00
+            </p>
+          </div>
+          <h3 class="romantism__title">
+            Від класицизму до романтизму
+          </h3>
+        </div>
+      </div>
+
+      <div class="gallery">
+        <h2 class="gallery__title">Галерея</h2>
+
+        <div class="gallery__pictures pictures">
+          <img
+          src="\images\gallery\1.jpeg"
+          alt="picture"
+          class="pictures__img"
+        >
+          <img
+            src="\images\gallery\2.jpg"
+            alt="picture"
+            class="pictures__img"
+          >
+          <img
+            src="\images\gallery\3.jpg"
+            alt="picture"
+            class="pictures__img pictures__img--hide"
+          >
+        </div>
+        <div class="gallery__pictures pictures pictures--second-line">
+          <img
+          src="\images\gallery\4.jpg"
+          alt="picture"
+          class="pictures__img"
+        >
+          <img
+            src="\images\gallery\5.jpg"
+            alt="picture"
+            class="pictures__img"
+          >
+          <img
+            src="\images\gallery\6.jpg"
+            alt="picture"
+            class="pictures__img pictures__img--hide"
+          >
+        </div>
+      </div>
+
+      <div class="subscribe">
+        <h2 class="subscribe__heading">Підписка</h2>
+        <p class="subscribe__text">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
+        <form
+          action="#"
+          method="POST"
+          class="subscribe__form form"
+        >
+          <input
+            type="text"
+            placeholder="E-mail"
+            class="form__input"
+          >
+          <button class="form__button"><img src="/images/vector.svg" alt="picture"></button>
+        </form>
+      </div>
+    </main>
+
+    <footer class="footer">
+      <div class="footer__all-content">
+        <div class="footer__media media">
+          <span class="media__logo">na<br>mu</span>
+          <div class="media__links links">
+            <a href="#" class="links__item">
+              <img
+              src="/images/media-icons/facebook.svg" alt="facebook"
+              >
+            </a>
+            <a href="#" class="links__item">
+              <img
+              src="/images/media-icons/instagram.svg" alt="instagram"
+              >
+            </a>
+          </div>
+        </div>
+
+        <div class="footer__wrap">
+          <div class="footer__information information">
+            <div class="information__timetable timetable">
+              <h4 class="timetable__title">Графік роботи</h4>
+              <p class="timetable__time">
+                <span class="timetable__time--bold">
+                  12:00 — 20:00
+                </span>
+                середа
+              </p>
+              <p class="timetable__time">
+                <span class="timetable__time--bold">
+                  12:00 — 20:00
+                </span>
+                четвер
+              </p>
+              <p class="timetable__time">
+                <span class="timetable__time--bold">
+                  12:00 — 20:00
+                </span>
+                п’ятниця
+              </p>
+              <p class="timetable__time">
+                <span class="timetable__time--bold">
+                  11:00 — 19:00
+                </span>
+                субота
+              </p>
+              <p class="timetable__time">
+                <span class="timetable__time--bold">
+                  11:00 — 19:00
+                </span>
+                неділя
+              </p>
+              <p class="timetable__text">
+                Вихідні понеділок,<br> вівторок<br>
+                Каса припиняє роботу за<br> 1 годину<br>
+                до закриття музею
+              </p>
+            </div>
+            <div class="information__contacts contacts">
+              <h4 class="contacts__title">
+                Контакти:
+              </h4>
+              вул. М. Грушевського, 6; Київ, 01001<br>
+              <a href="tel:+38 (044) 278-13-57" class="contacts__link">
+                тел. +38 (044) 278-13-57
+              </a>
+              <a href="tel:+38 (044) 278-74-54" class="contacts__link">
+                факс +38 (044) 278-74-54
+              </a>
+              <a href="mailto:info@namu.kiev.ua" class="contacts__link">
+                e-mail: info@namu.kiev.ua
+              </a>
+            </div>
+          </div>
+
+          <nav class="footer__nav nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  Галерея
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  Виставки та події
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="" class="nav__link">
+                  Відвідування
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  Стати нашим другом
+                </a>
+              </li>
+            </ul>
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  Про нас
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  Магазин
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  Блог
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="" class="nav__link">
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+      <div class="footer__copyright">
+        <p>
+          Designed by Zhyriada Marina
+        </p>
+        <p>
+          Copyright © 2019. All Rights Reserved.
+        </p>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
