--- a/src/index.html
+++ b/src/index.html
@@ -49,13 +49,18 @@
 
     <main>
       <section class="section">
-        <div class="exhibition section__actual">
-          <h1 class="heading exhibition__heading">
-            Актуальні події
-          </h1>
-
+        <h1 class="heading section__heading">
+          Актуальні події
+        </h1>
+        <div class="exhibition">
           <div class="exhibition__block exhibition__block--left">
-            <div class="exhibition__img exhibition__img--left"></div>
+            <div class="exhibition__img exhibition__img--left">
+              <img
+                src="./images/ex1.png"
+                alt="Йду і повертаюсь"
+                class="image"
+              >
+            </div>
             <div class="exhibition__main exhibition__main--left">
               <div class="exhibition__top">
                 <p class="exhibition__label">
@@ -65,9 +70,9 @@
                   26.08-29.11.2019
                 </p>
               </div>
-              <div class="exhibition__title">
+              <span class="exhibition__title">
                 Йду і повертаюсь
-              </div>
+              </span>
               <div class="exhibition__text">
                 <p>
                   Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
@@ -77,6 +82,13 @@
           </div>
 
           <div class="exhibition__block exhibition__block--right">
+            <div class="exhibition__img exhibition__img--right">
+              <img
+                src="./images/ex2.png"
+                alt="І спогади, і мрії"
+                class="image"
+              >
+            </div>
             <div class="exhibition__main exhibition__main--right">
               <div class="exhibition__top">
                 <p class="exhibition__label">
@@ -86,16 +98,15 @@
                   26.08-29.11.2019
                 </p>
               </div>
-              <div class="exhibition__title">
+              <span class="exhibition__title">
                 І спогади, і мрії
-              </div>
+              </span>
               <div class="exhibition__text">
                 <p>
                   Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
                 </p>
               </div>
             </div>
-            <div class="exhibition__img exhibition__img--right"></div>
           </div>
         </div>
       </section>
@@ -119,10 +130,10 @@
       </section>
 
       <section class="section">
-        <div class="gallery section__gallery">
-          <h1 class="heading gallery__heading">
-            Галерея
-          </h1>
+        <h1 class="heading section__heading section__heading--gallery">
+          Галерея
+        </h1>
+        <div class="gallery">
 
           <div class="photos photos__first">
             <img
@@ -258,9 +269,13 @@
             </p>
           </div>
         </div>
-        <div class="footer__narrow">
-          <a href="#header"></a>
-        </div>
+        <a href="#header">
+          <img
+            src="./images/icon.png"
+            alt="Вгору"
+            class="footer__narrow"
+          >
+        </a>
         <div class="footer__mediaq">
           <div class="links footer__links">
             <div class="links__list">
