small bugs fixed

--- a/src/index.html
+++ b/src/index.html
@@ -265,7 +265,7 @@
               <br>
                 тел. <a href="tel:+380442781357" class="link footer__link">+38 (044) 278-13-57</a><br>
                 факс <a href="tel:+380442787454" class="link footer__link">+38 (044) 278-74-54</a><br>
-                e-mail: <a href="mailto:info@namu.kiev.ua" class="link footer__link">info@namu.kiev.ua</a>
+                e-mail: <a href="mailto:info@namu.kiev.ua" class="link footer__link">info@nmu.kiev.ua</a>
             </p>
           </div>
         </div>
