add burger menu

--- a/src/index.html
+++ b/src/index.html
@@ -17,18 +17,29 @@
           <button class="art__btn">КВИТКИ<span data-icon=""></span></button>
         </div>
       </div>
+
       <input
         type="checkbox"
         class="header__toggler"
-        id="nav-toggler"
+        id="menu-toggler"
         >
-      <label for="nav-toggler" class="header__toggler-label">
+      <label for="menu-toggler" class="header__toggler-label">
         <span class="header__toggler-menu"></span>
       </label>
-      <nav class="header__nav nav">
-        <ul class="nav__list">
-          <li class="nav__item">
-            <a href="" class="nav__link"></a>
+
+      <nav class="header__menu menu">
+        <ul class="menu__list">
+          <li class="menu__item">
+            <a href="#" class="menu__link">Події</a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link">Галерея</a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link">Підписка</a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link">Контакти</a>
           </li>
         </ul>
       </nav>
