--- a/src/index.html
+++ b/src/index.html
@@ -19,12 +19,22 @@
         <header class="header">
           <section class="header__section section">
             <div class="header__main">
-              <h1 class="header__title">ХУДОЖ<span class="header__title-span">НІЙ</span><br> МУЗЕЙ</h1>
+              <h1 class="header__title">
+                ХУДОЖ<span class="header__title-span">НІЙ</span><br> МУЗЕЙ
+              </h1>
               <div class="header__btn">
-                <a href="#" class="header__button"><span class="header__button-text">КВИТКИ</span><span class=" header__button-span">&#10095;</span>
+                <a href="#" class="header__button">
+                  <span class="header__button-text">
+                  КВИТКИ
+                  </span>
+                  <span class=" header__button-span">
+                  &#10095;
+                  </span>
                 </a>
               </div>
-              <p class="header__event">ПОДІЇ</p>
+              <p class="header__event">
+                ПОДІЇ
+              </p>
             </div>
             <div class="header__photo">
               <img
@@ -32,14 +42,18 @@
                 src="\images\museum.png"
                 alt="museum"
               >
-              <span class="header__logo">NA<br>MU</span>
+              <span class="header__logo">
+                NA<br>MU
+              </span>
             </div>
           </section>
         </header>
 
         <main class="main">
           <section class="main__section section" id="event">
-            <h2 class="main__title">Актуальні події</h2>
+            <h2 class="main__title">
+              Актуальні події
+            </h2>
             <div class="main__event event main__event--top">
               <img
                 class="event__img"
@@ -48,10 +62,15 @@
               >
               <div class="event__card">
                 <div class="event__caption">
-                  <p class="event__exhibition">ВИСТАВКА</p>
-                  <p class="event__date">26.08-29.11.2019</p>
+                  <p class="event__exhibition">
+                    ВИСТАВКА
+                  </p>
+                  <p class="event__date">
+                    26.08-29.11.2019
+                  </p>
                 </div>
-                <h3 class="event__title event__title--top">Йду і повертаюсь
+                <h3 class="event__title event__title--top">
+                  Йду і повертаюсь
                 </h3>
                 <p class="event__description">
                   Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
@@ -61,10 +80,15 @@
             <div class="main__event event main__event--bottom">
               <div class="event__card event__card--bottom">
                 <div class="event__caption">
-                  <p class="event__exhibition">ВИСТАВКА</p>
-                  <p class="event__date">26.08-29.11.2019</p>
+                  <p class="event__exhibition">
+                    ВИСТАВКА
+                  </p>
+                  <p class="event__date">
+                    26.08-29.11.2019
+                  </p>
                 </div>
-                <h3 class="event__title event__title--bottom">І спогади і мрії
+                <h3 class="event__title event__title--bottom">
+                  І спогади і мрії
                 </h3>
                 <p class="event__description">
                   Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
@@ -82,10 +106,16 @@
             <div class="main__lection lection" id="lection">
               <div class="lection__card">
                 <div class="lection__caption">
-                  <p class="lection__name">ЛЕКЦІЯ</p>
-                  <p class="lection__date">26/08/2019 - 11:00</p>
+                  <p class="lection__name">
+                    ЛЕКЦІЯ
+                  </p>
+                  <p class="lection__date">
+                    26/08/2019 - 11:00
+                  </p>
                 </div>
-                <h3 class="lection__title">Від класицизму до романтизму</h3>
+                <h3 class="lection__title">
+                  Від класицизму до романтизму
+                </h3>
               </div>
             </div>
           </section>
