--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,12 @@
       </div>
       <div class="header__info">
         <h1 class="header__title">
-          Худож<span class="header__span">ній</span><br>музей
+          Худож
+          <span class="header__span">
+            ній
+          </span>
+          <br>
+          музей
         </h1>
         <a class="header__link" href="#">
           <span class="header__text">
@@ -33,7 +38,8 @@
         </a>
       </div>
       <div class="header__photo">
-        <img class="header__img"
+        <img
+          class="header__img"
           src="./images/Header-img.png"
           alt="Художній музей">
         <div class="header__logo">
