--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,8 @@
         <div class="header__left">
           <p class="header__text">Події</p>
           <h1 class="header__title">
-            Худож<span class="header__title-transparent">ній</span> музей
+            Худож<span class="header__title-transparent">ній</span>
+            музей
           </h1>
           <a href="#" class="header__link">
             <span class="header__link-text">Квитки</span><span class="header__link-arrow">&#10095</span>
