--- a/src/index.html
+++ b/src/index.html
@@ -111,7 +111,6 @@
 
       <div class="gallery">
         <h2 class="gallery__title">Галерея</h2>
-
         <div class="gallery__pictures pictures">
           <img
           src="\images\gallery\1.jpeg"
@@ -145,6 +144,12 @@
             alt="picture"
             class="pictures__img pictures__img--hide"
           >
+        </div>
+        <div class="gallery__dots">
+          <div class="gallery__dot gallery__dot--active"></div>
+          <div class="gallery__dot"></div>
+          <div class="gallery__dot"></div>
+          <div class="gallery__dot"></div>
         </div>
       </div>
 
