--- a/src/index.html
+++ b/src/index.html
@@ -109,6 +109,27 @@
           <div class="gallery__image"></div>
           <div class="gallery__image"></div>
         </div>
+        <div class="gallery__slider">
+          <input
+            type="radio"
+            id="gallery1"
+            name="scroll_position"
+            value="1"
+            checked
+          >
+          <input
+            type="radio"
+            id="gallery2"
+            name="scroll_position"
+            value="2"
+          >
+          <input
+            type="radio"
+            id="gallery3"
+            name="scroll_position"
+            value="3"
+          >
+        </div>
       </section>
       <section class="event img-bottom">
         <p>
