--- a/src/index.html
+++ b/src/index.html
@@ -110,25 +110,10 @@
           <div class="gallery__image"></div>
         </div>
         <div class="gallery__slider">
-          <input
-            type="radio"
-            id="gallery1"
-            name="scroll_position"
-            value="1"
-            checked
-          >
-          <input
-            type="radio"
-            id="gallery2"
-            name="scroll_position"
-            value="2"
-          >
-          <input
-            type="radio"
-            id="gallery3"
-            name="scroll_position"
-            value="3"
-          >
+          <div class="gallery__point is-active"></div>
+          <div class="gallery__point"></div>
+          <div class="gallery__point"></div>
+          <div class="gallery__point"></div>
         </div>
       </section>
       <section class="event img-bottom">
@@ -159,7 +144,84 @@
       </section>
     </main>
     <footer class="footer">
+      <section class="footer__media">
+        <img
+          class="footer__media-logo"
+          src="\images\header_logo.svg"
+          alt="logo"
+        >
+        <div>
+          <a href="#">
+            <img
+              class="footer__media-share"
+              src="\images\facebook.svg"
+              alt="facebook"
+            >
+          </a>
+          <a href="#">
+            <img
+              class="footer__media-share"
+              src="\images\instagram.svg"
+              alt="instagram"
+            >
+          </a>
+        </div>
+      </section>
+      <section class="footer__contacts">
+        <div class="footer__left">
+          <p>Графік роботи</p>
+          <p class="footer__time">12:00 — 20:00 середа</p>
+          <p class="footer__time">12:00 — 20:00 четвер</p>
+          <p class="footer__time">12:00 — 20:00 п’ятниця</p>
+          <p class="footer__time">11:00 — 19:00 субота</p>
+          <p class="footer__time">11:00 — 19:00 неділя</p>
 
+          <p>
+            Вихідні: понеділок, вівторок. Каса припиняє роботу за 1 годину до закриття музею
+          </p>
+        </div>
+        <div class="footer__right">
+          <p>Контакти: </p>
+          вул. М. Грушевського, 6; Київ, 01001
+          тел. +38 (044) 278-13-57
+          факс +38 (044) 278-74-54
+          e-mail: info@namu.kiev.ua
+        </div>
+      </section>
+      <section class="footer__menu">
+        <div class="footer__left">
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a class="footer__link" href="#">Галерея</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#">Виставки та події</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#">Відвідування</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#">Стати нашим другом</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__right">
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a class="footer__link" href="#">Про Нас</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#">Магазин</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#">Блог</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#">Контакти</a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </footer>
   </body>
 </html>
