Fixes after mentor review

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,8 @@
       <div class="header__image"></div>
 
       <p class="title header__title">
-        Худож<span class="title__decor">ній</span><br>музей
+        Худож<span class="title__decor">ній</span><br>
+        музей
       </p>
 
       <div class="menu header__menu">
@@ -138,17 +139,17 @@
           <div class="photos photos__first">
             <img
               src="./images/ph1.png"
-              alt=""
+              alt="Картина із галереї"
               class="photos__img photos__img--1"
             >
             <img
               src="./images/ph2.png"
-              alt=""
+              alt="Картина із галереї"
               class="photos__img photos__img--2"
             >
             <img
               src="./images/ph3.png"
-              alt=""
+              alt="Картина із галереї"
               class="photos__img photos__img--3"
             >
           </div>
@@ -163,17 +164,17 @@
           <div class="photos photos__second">
             <img
               src="./images/ph4.png"
-              alt=""
+              alt="Картина із галереї"
               class="photos__img photos__img--4"
             >
             <img
               src="./images/ph5.png"
-              alt=""
+              alt="Картина із галереї"
               class="photos__img photos__img--5"
             >
             <img
               src="./images/ph6.png"
-              alt=""
+              alt="Картина із галереї"
               class="photos__img photos__img--6"
             >
           </div>
