Alt-attributes edited plus small fixes in header

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,10 @@
       <div class="header__image"></div>
 
       <p class="title header__title">
-        Худож<span class="title__decor">ній</span><br>
+        <span>
+          Худож<span class="title__decor">ній</span>
+        </span>
+        <br>
         музей
       </p>
 
@@ -139,17 +142,17 @@
           <div class="photos photos__first">
             <img
               src="./images/ph1.png"
-              alt="Картина із галереї"
+              alt="Картина з дівчиною"
               class="photos__img photos__img--1"
             >
             <img
               src="./images/ph2.png"
-              alt="Картина із галереї"
+              alt="Картина з хатою"
               class="photos__img photos__img--2"
             >
             <img
               src="./images/ph3.png"
-              alt="Картина із галереї"
+              alt="Картина з гусьми"
               class="photos__img photos__img--3"
             >
           </div>
@@ -164,17 +167,17 @@
           <div class="photos photos__second">
             <img
               src="./images/ph4.png"
-              alt="Картина із галереї"
+              alt="Картина з парковою алеєю"
               class="photos__img photos__img--4"
             >
             <img
               src="./images/ph5.png"
-              alt="Картина із галереї"
+              alt="Картина з пейзажем"
               class="photos__img photos__img--5"
             >
             <img
               src="./images/ph6.png"
-              alt="Картина із галереї"
+              alt="Картина з натовпом людей"
               class="photos__img photos__img--6"
             >
           </div>
