span in header-title edited

--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,7 @@
       <div class="header__image"></div>
 
       <p class="title header__title">
-        <span>
-          Худож<span class="title__decor">ній</span>
-        </span>
+        <span>Худож</span><span class="title__decor">ній</span>
         <br>
         музей
       </p>
